# computron

./: .editorconfig  .eslintrc.json  .gitignore  .npmignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.js  package-lock.json  package.json
.github/workflows/: build-and-test.yml
dataset/: otherxslt.xsl
lib/: binding.js
src/: ApplyWorker.cpp  ApplyWorker.h  Computron.cpp  Computron.h  LoadStylesheetWorker.cpp  LoadStylesheetWorker.h  Utils.cpp  Utils.h  Worker.cpp  Worker.h  addon.cpp  document.cpp  document.h  main.cpp  transformer.cpp  transformer.h
test/: addon-test.js  run.js
test/data/: another-stylesheet.xsl  example.xml  stylesheet.xsl
test/dataset/: correct-params.xsl  correct.xsl  error.xml  error.xsl
tools/: generateVSCodeConfig.js  generateVSCodeConfig.mjs
